Fixed vertical gap between navigation cards on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -61,6 +61,7 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          row-gap: 20px;
 
           & > a {
             margin-bottom: 30px;
